Setting detailed logging

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,7 +5,7 @@ before_build:
 - cmd: nuget restore
 build:
   parallel: true
-  verbosity: minimal
+  verbosity: detailed
 after_build:
 - cmd: nuget pack src\Innofactor.Xrm.Json.Serialization\Innofactor.Xrm.Json.Serialization.csproj -properties Configuration=Release -Version %APPVEYOR_BUILD_VERSION%
 artifacts:
