--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,6 +7,6 @@ build:
   parallel: true
   verbosity: minimal
 after_build:
-- cmd: tree /a && nuget pack src\Innofactor.Xrm.Json.Serialization\Innofactor.Xrm.Json.Serialization.csproj -Properties Configuration=Release -Verbosity Detailed -Version %APPVEYOR_BUILD_VERSION%
+- cmd: tree /a && nuget pack src\Innofactor.Xrm.Json.Serialization\Innofactor.Xrm.Json.Serialization.csproj -Version %APPVEYOR_BUILD_VERSION%
 artifacts:
 - path: '*.nupkg'
