--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,3 +18,7 @@ after_build:
 - cmd: nuget pack src\Innofactor.Xrm.Json.Serialization\Innofactor.Xrm.Json.Serialization.csproj -Properties Configuration=Release;Platform=AnyCPU -Version %APPVEYOR_BUILD_VERSION%
 artifacts:
 - path: '*.nupkg'
+deploy:
+- provider: NuGet
+  api_key:
+    secure: plVZVEG/g8+AKx8nujq5O2I7zbAXSnZBnL/kQXA4aJ+5NOqCEkdWvSj3zvUsgxtU
