--- a/src/Innofactor.Xrm.Json.Serialization/Innofactor.Xrm.Json.Serialization.nuspec
+++ b/src/Innofactor.Xrm.Json.Serialization/Innofactor.Xrm.Json.Serialization.nuspec
@@ -6,7 +6,7 @@
     <title>Xrm.Json.Serialization</title>
     <authors>Alexey Shytikov</authors>
     <owners>Innofactor AB</owners>
-    <projectUrl>https://github.com/Innofactor/Xrm.Persistent.Collections</projectUrl>
+    <projectUrl>https://github.com/Innofactor/Xrm.Json.Serialization</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <licenseUrl>https://licenses.nuget.org/MIT</licenseUrl>
     <description>Compact JSON serialization for Microsoft Dynamics CRM entities</description>
