Adding tests for `DateTimeConverter`

--- a/src/Innofactor.Xrm.Json.Serialization.Tests/Innofactor.Xrm.Json.Serialization.Tests.csproj
+++ b/src/Innofactor.Xrm.Json.Serialization.Tests/Innofactor.Xrm.Json.Serialization.Tests.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CombinedTypesTests.cs" />
+    <Compile Include="DateTimeConverterTests.cs" />
     <Compile Include="EntityCollectionConverterTests.cs" />
     <Compile Include="EntityReferenceConverterTests.cs" />
     <Compile Include="EntityConverterTests.cs" />
