--- a/src/Innofactor.Xrm.Json.Serialization/Innofactor.Xrm.Json.Serialization.csproj
+++ b/src/Innofactor.Xrm.Json.Serialization/Innofactor.Xrm.Json.Serialization.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateTimeConverter.cs" />
     <Compile Include="EntityCollectionConverter.cs" />
     <Compile Include="EntityConverter.cs" />
     <Compile Include="EntityReferenceConverter.cs" />
