--- a/src/Innofactor.Xrm.Json.Serialization/Innofactor.Xrm.Json.Serialization.nuspec
+++ b/src/Innofactor.Xrm.Json.Serialization/Innofactor.Xrm.Json.Serialization.nuspec
@@ -9,7 +9,7 @@
     <projectUrl>https://github.com/Innofactor/Xrm.Json.Serialization</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <licenseUrl>https://licenses.nuget.org/MIT</licenseUrl>
-    <description>Compact JSON serialization for Microsoft Dynamics CRM entities</description>
-    <copyright>Copyright © Innofactor AB 2020</copyright>
+    <description>Compact JSON serialization for Microsoft Dynamics 365/CRM/Dataverse entities</description>
+    <copyright>Copyright © Innofactor AB 2021</copyright>
   </metadata>
 </package>
