--- a/src/Innofactor.Xrm.Json.Serialization/Innofactor.Xrm.Json.Serialization.nuspec
+++ b/src/Innofactor.Xrm.Json.Serialization/Innofactor.Xrm.Json.Serialization.nuspec
@@ -11,5 +11,6 @@
     <licenseUrl>https://licenses.nuget.org/MIT</licenseUrl>
     <description>Compact JSON serialization for Microsoft Dynamics 365/CRM/Dataverse entities</description>
     <copyright>Copyright © Innofactor AB 2021</copyright>
+	<iconUrl>https://www.innofactor.com/globalassets/other-sizes/innofactor-small-logo.png</iconUrl>
   </metadata>
 </package>
